Clean up code and responsive design

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-              <div class="collapse navbar-collapse">
+              <div class="collapse navbar-collapse" id="navbarMenu">
                   <ul class="navbar-nav ms-auto">
                     <li class="navbar-item"><a class="nav-link active" href="#"><i class="fa-solid fa-house fa-lg"></i> Home</a></li>
                     <li class="navbar-item"><a class="nav-link" href="menu.html"><i class="fa-solid fa-list fa-lg"></i> Menu</a></li>
@@ -89,7 +89,7 @@
                         type="name"
                         class="form-control form-control-sm"
                         id="enterName"
-                        placeholder="Enter Name"
+                        placeholder="Enter name"
                         />
                     </div>
                     <div class="mb-3 col-12">
